# api/app/docs/swagger.yaml
@@ -37,6 +37,35 @@ info:
   title: Image Evaluate API
   version: "1.0"
 paths:
+  /api/report/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Update the report corresponding to the input id
+      parameters:
+      - description: ID of the report to be updated
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Create report
+        in: body
+        name: report
+        required: true
+        schema:
+          $ref: '#/definitions/models.Report'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Report'
+      security:
+      - ApiKeyAuth: []
+      summary: Update report identified by the given id
+      tags:
+      - report
   /report:
     get:
       consumes:
@@ -87,7 +116,7 @@ paths:
         in: path
         name: id
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
